Source Systems, Data Ingestion, and Pipelines/W3/C2_W3_Lab_1/terraform/modules/bastion_host/network.tf
data "aws_vpc" "main" {
  id = var.vpc_id
}

### START CODE HERE ### (~ 12 lines of code)

# Create a data source for the public subnet 
# using the corresponding variable
data "aws_subnet" "public_subnet" {
  id = var.None
}

# Create a data source for the private subnet in
# the AZ A using the corresponding variable
data "None" "None" {
  id = None.None
}

# Create a data source for the private subnet in
# the AZ B using the corresponding variable
data "None" "None" {
  id = None.None
}

### END CODE HERE ###

resource "aws_security_group" "bastion_host" {
  vpc_id = data.aws_vpc.main.id
  name   = "${var.project}-bastion-host-sg"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow incoming SSH connections (Linux)"
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow all outgoing traffic"
  }

  tags = {
    Name = "${var.project}-bastion-host-sg"
  }
}

resource "aws_security_group" "database" {
  vpc_id = data.aws_vpc.main.id
  name   = "${var.project}-database-sg"

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_host.id]
    description     = "Allow incoming connections from the bastion host sg"
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow all outgoing traffic"
  }

  tags = {
    Name = "${var.project}-database-sg"
  }
}
